[bug] horizontal scrollbar fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ select {
 body {
   margin: 0;
   font-family: "Manrope", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
